--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     
     <div class="container">
+        <h1>Stop<span>watch</span></h1>
         <div id="timer">
             00:00:00
         </div>
